# Pidgin

./: .gitignore  Cargo.toml  README.md  benchmarks.md  rustfmt.toml
block_macros/: Cargo.toml
block_macros/src/: lib.rs
program_macro/: Cargo.toml
program_macro/src/: lib.rs
src/: blocks.rs  instructions.rs  lib.rs  main.rs  runtime.rs  string_utils.rs
src/compiler/: ast_to_ir.rs  error.rs  ir.rs  ir_instructions.rs  mod.rs  parse.rs  transformations.rs
src/compiler/ast/: error.rs  expressions.rs  mod.rs  parse.rs  to_ir.rs  token.rs  tree.rs
src/compiler/transformations/: cleanup.rs  core_inlining.rs  lifetimes.rs  mod.rs  register_allocation.rs
src/frontend/: error.rs  evaluator.rs  mod.rs
src/runtime/: control.rs  core_functions.rs  data.rs  error.rs  evaluation.rs  instructions.rs  mod.rs  vm.rs
