[package]
name = "pidgin"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-map = "2.7.3"
ordered-float = "4.2.0"
take_mut = "0.2.2"
block_macros = { path = "block_macros" }
itertools = "0.13.0"
rustyline = { version = "14.0.0", features = ["with-file-history"] }

[profile.release]
strip = true
# opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
